--- a/home.html
+++ b/home.html
@@ -1,1 +1,8 @@
+<HTML>
+<Title> Shivam </Title>
+<Frameset rows="80,*" bordercolor="393232" border="7" noresize>
 
+<Frame Name="Frame1" Src="Navbar.htm" scrollbar="auto">
+<Frame Name="Frame2" Src="Home.htm" scrollbar="auto">
+</frameset>
+</HTML>
