--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <HTML>
-<Title> Shivam </Title>
+<title> Shivam </title>
 <Frameset rows="80,*" bordercolor="393232" border="7" noresize>
 
 <Frame Name="Frame1" Src="Navbar.htm" scrollbar="auto">
