--- a/home.html
+++ b/home.html
@@ -22,18 +22,18 @@
 <link rel="shortcut icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 
-<link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/style.css">
 
-<link rel="stylesheet" href="css/icomoon.css">
+<link rel="stylesheet" href="css/style.css">
 
-<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/style.css">
 
-<link rel="stylesheet" href="css/flexslider.css">
+<link rel="stylesheet" href="css/style.css">
 
-<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+<link rel="stylesheet" href="css/style.css">
 
-<link rel="stylesheet" href="css/owl.carousel.min.css">
-<link rel="stylesheet" href="css/owl.theme.default.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css">
 
 <link rel="stylesheet" href="css/style.css">
 
