--- a/about.html
+++ b/about.html
@@ -2,4 +2,6 @@
  
 <h1> hello </h1>
 
+ <p> Welcome to TriviPop! This is a website where you can compete with your friends in fun games and donate to your 
+  favorite charities while you're at it. Click <p>here <a href="game.html">W3Schools</a></p> to start playing! 
 <HTML>
