--- a/home.html
+++ b/home.html
@@ -22,20 +22,20 @@
 <link rel="shortcut icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
 
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="donationgame/style.css">
 
 <script src="js/modernizr-2.6.2.min.js"></script>
 
