--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1> talk to us! </h1> 
+  
+  
+<a href="default.asp">
+  <img src="fblogo.jpg" alt="HTML tutorial" style="width:42px;height:42px;border:0">
+</a>
+
+
+</body>
+</html>
 
