--- a/about.html
+++ b/about.html
@@ -3,5 +3,5 @@
 <h1> hello </h1>
 
  <p> Welcome to TriviPop! This is a website where you can compete with your friends in fun games and donate to your 
-  favorite charities while you're at it. Click <p>here <a href="game.html">W3Schools</a></p> to start playing! 
+  favorite charities while you're at it. Click <p> <a href="game.html">here</a></p> to start playing! 
 <HTML>
