--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   
   
 <a href="default.asp">
-  <img src="fblogo.jpg" alt="HTML tutorial" style="width:300;height:300;border:0">
+  <img src="fblogo.jpg" alt="please" style="width:300;height:300;border:0">
 </a>
 
 
