--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <h1> talk to us! </h1> 
   
   
-<a href="default.asp">
+<a href="https://facebook.com">
   <img src="fblogo.jpg" alt="please" style="width:300;height:300;border:0">
 </a>
 
