--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body>
+<body bgcolor ="#E6E6FA">
 <div id="colorlib-page">
 <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
