--- a/home.html
+++ b/home.html
@@ -51,11 +51,12 @@
 <nav id="colorlib-main-menu" role="navigation">
 <ul>
 <li class="colorlib-active"><a href="index.html">Home</a></li>
-<li><a href="work.html">Project</a></li>
+<li><a href="game.html">Project</a></li>
 <li><a href="about.html">About</a></li>
-<li><a href="services.html">Services</a></li>
-<li><a href="blog.html">Blog</a></li>
-<li><a href="contact.html">Contact</a></li>
+<li><a href="causes.html">Causes</a></li>
+<li><a href="home.html">Home</a></li>
+<li><a href="sponsor.html">Sponsors</a></li>
+<li><a href="socialmedia.html">Social Media</a></li>
 </ul>
 </nav>
 <div class="colorlib-footer">
