--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 <meta charset="utf-8">
@@ -43,20 +42,19 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body bgcolor ="#E6E6FA">
+<body>
 <div id="colorlib-page">
 <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
-<h1 id="colorlib-logo"><a href="index.html">Trivi Pop</a></h1>
+<h1 id="colorlib-logo"><a href="index.html">Balay</a></h1>
 <nav id="colorlib-main-menu" role="navigation">
 <ul>
 <li class="colorlib-active"><a href="index.html">Home</a></li>
-<li><a href="game.html">Project</a></li>
+<li><a href="game.html">Game</a></li>
 <li><a href="about.html">About</a></li>
 <li><a href="causes.html">Causes</a></li>
 <li><a href="home.html">Home</a></li>
-<li><a href="sponsor.html">Sponsors</a></li>
-<li><a href="socialmedia.html">Social Media</a></li>
+<li><a href="sponsors.html">Sponsors</a></li>
 </ul>
 </nav>
 <div class="colorlib-footer">
