--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,13 @@
   
   
 <a href="https://facebook.com">
-  <img src="https://raw.githubusercontent.com/carocheez/trivipop/master/Facebook.png" alt="please" style="width:100px;height:100px;border:0">
+  <img src="https://raw.githubusercontent.com/carocheez/trivipop/master/Facebook.png" alt="please" 
+       style="width:100px;height:100px;border:0">
+</a>
+  
+<a href="https://twitter.com">
+  <img src="https://raw.githubusercontent.com/carocheez/trivipop/master/Facebook.png" alt="please" 
+       style="width:100px;height:100px;border:0">
 </a>
 
 
