--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,12 @@
   <img src="https://raw.githubusercontent.com/carocheez/trivipop/master/twitter-logo-final.png" alt="please" 
        style="width:100px;height:100px;border:20">
 </a>
+  
+<a href="https://instagram.com">
+  <img src="https://raw.githubusercontent.com/carocheez/trivipop/master/social-instagram-new-circle-512.png" alt="please" 
+       style="width:100px;height:100px;border:20">
+</a>
+
 
 
 </body>
